// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic enum 1`] = `
"import { GraphQLResolveInfo } from \\"graphql\\";

export interface ResolverFn<Parent, Args, Ctx, Payload> {
  (parent: Parent, args: Args, ctx: Ctx, info: GraphQLResolveInfo):
    | Payload
    | Promise<Payload>;
}

export interface ITypes {
  Context: any;
  UserType: any;

  UserParent: any;
}

export namespace IUser {
  export type IdResolver<T extends ITypes> = ResolverFn<
    T[\\"UserParent\\"],
    {},
    T[\\"Context\\"],
    string
  >;

  export type NameResolver<T extends ITypes> = ResolverFn<
    T[\\"UserParent\\"],
    {},
    T[\\"Context\\"],
    string
  >;

  export type TypeResolver<T extends ITypes> = ResolverFn<
    T[\\"UserParent\\"],
    {},
    T[\\"Context\\"],
    T[\\"UserType\\"]
  >;

  export interface Resolver<T extends ITypes> {
    id: IdResolver<T>;
    name: NameResolver<T>;
    type: TypeResolver<T>;
  }
}

export interface IResolvers<T extends ITypes> {
  User: IUser.Resolver<T>;
}
"
`;

exports[`basic schema 1`] = `
"import { GraphQLResolveInfo } from \\"graphql\\";

export interface ResolverFn<Parent, Args, Ctx, Payload> {
  (parent: Parent, args: Args, ctx: Ctx, info: GraphQLResolveInfo):
    | Payload
    | Promise<Payload>;
}

export interface ITypes {
  Context: any;

  QueryParent: any;
  NumberParent: any;
}

export namespace IQuery {
  export type IdResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    string
  >;

  export type Custom_requiredResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    T[\\"NumberParent\\"]
  >;

  export type Custom_nullableResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    T[\\"NumberParent\\"] | null
  >;

  export type Custom_array_nullableResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    T[\\"NumberParent\\"][] | null
  >;

  export type Custom_array_requiredResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    T[\\"NumberParent\\"][]
  >;

  export interface ArgsCustom_with_arg {
    id: number;
  }

  export type Custom_with_argResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    ArgsCustom_with_arg,
    T[\\"Context\\"],
    T[\\"NumberParent\\"]
  >;

  export interface ArgsCustom_with_custom_arg {
    id: T[\\"NumberParent\\"];
  }

  export type Custom_with_custom_argResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    ArgsCustom_with_custom_arg,
    T[\\"Context\\"],
    T[\\"NumberParent\\"]
  >;

  export type Scalar_requiredResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    boolean
  >;

  export type Scalar_nullableResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    boolean | null
  >;

  export type Scalar_array_nullableResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    boolean[] | null
  >;

  export type Scalar_array_requiredResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    {},
    T[\\"Context\\"],
    boolean[]
  >;

  export interface ArgsScalar_with_arg {
    id: number;
  }

  export type Scalar_with_argResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    ArgsScalar_with_arg,
    T[\\"Context\\"],
    boolean
  >;

  export interface ArgsScalar_with_custom_arg {
    id: T[\\"NumberParent\\"];
  }

  export type Scalar_with_custom_argResolver<T extends ITypes> = ResolverFn<
    T[\\"QueryParent\\"],
    ArgsScalar_with_custom_arg,
    T[\\"Context\\"],
    boolean
  >;

  export interface Resolver<T extends ITypes> {
    id: IdResolver<T>;
    custom_required: Custom_requiredResolver<T>;
    custom_nullable: Custom_nullableResolver<T>;
    custom_array_nullable: Custom_array_nullableResolver<T>;
    custom_array_required: Custom_array_requiredResolver<T>;
    custom_with_arg: Custom_with_argResolver<T>;
    custom_with_custom_arg: Custom_with_custom_argResolver<T>;
    scalar_required: Scalar_requiredResolver<T>;
    scalar_nullable: Scalar_nullableResolver<T>;
    scalar_array_nullable: Scalar_array_nullableResolver<T>;
    scalar_array_required: Scalar_array_requiredResolver<T>;
    scalar_with_arg: Scalar_with_argResolver<T>;
    scalar_with_custom_arg: Scalar_with_custom_argResolver<T>;
  }
}

export namespace INumber {
  export type IdResolver<T extends ITypes> = ResolverFn<
    T[\\"NumberParent\\"],
    {},
    T[\\"Context\\"],
    string | null
  >;

  export type ValueResolver<T extends ITypes> = ResolverFn<
    T[\\"NumberParent\\"],
    {},
    T[\\"Context\\"],
    number | null
  >;

  export interface Resolver<T extends ITypes> {
    id: IdResolver<T>;
    value: ValueResolver<T>;
  }
}

export interface IResolvers<T extends ITypes> {
  Query: IQuery.Resolver<T>;
  Number: INumber.Resolver<T>;
}
"
`;

exports[`basic union 1`] = `
"import { GraphQLResolveInfo } from \\"graphql\\";

export interface ResolverFn<Parent, Args, Ctx, Payload> {
  (parent: Parent, args: Args, ctx: Ctx, info: GraphQLResolveInfo):
    | Payload
    | Promise<Payload>;
}

export interface ITypes {
  Context: any;

  UserType: any;
  UserParent: any;
  StudentParent: any;
  ProfessorParent: any;
}

export namespace IUser {
  export type IdResolver<T extends ITypes> = ResolverFn<
    T[\\"UserParent\\"],
    {},
    T[\\"Context\\"],
    string
  >;

  export type NameResolver<T extends ITypes> = ResolverFn<
    T[\\"UserParent\\"],
    {},
    T[\\"Context\\"],
    string
  >;

  export type TypeResolver<T extends ITypes> = ResolverFn<
    T[\\"UserParent\\"],
    {},
    T[\\"Context\\"],
    T[\\"UserType\\"]
  >;

  export interface Resolver<T extends ITypes> {
    id: IdResolver<T>;
    name: NameResolver<T>;
    type: TypeResolver<T>;
  }
}

export namespace IStudent {
  export type AgeResolver<T extends ITypes> = ResolverFn<
    T[\\"StudentParent\\"],
    {},
    T[\\"Context\\"],
    number
  >;

  export interface Resolver<T extends ITypes> {
    age: AgeResolver<T>;
  }
}

export namespace IProfessor {
  export type DegreeResolver<T extends ITypes> = ResolverFn<
    T[\\"ProfessorParent\\"],
    {},
    T[\\"Context\\"],
    string | null
  >;

  export interface Resolver<T extends ITypes> {
    degree: DegreeResolver<T>;
  }
}

export interface IResolvers<T extends ITypes> {
  User: IUser.Resolver<T>;
  Student: IStudent.Resolver<T>;
  Professor: IProfessor.Resolver<T>;
}
"
`;
